# project-euler-framework

./: Cargo.toml  README.md
examples/: problem_solutions.rs
src/: combinatorics.rs  lib.rs  number_theory.rs  sequences.rs  utilities.rs
