[package]
name = "project-euler-framework"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive mathematical framework for solving Project Euler problems"
repository = "https://github.com/yourusername/project-euler-framework"
license = "MIT"
keywords = ["mathematics", "project-euler", "number-theory", "combinatorics"]
categories = ["mathematics", "algorithms"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false